Teste  modif sur master=> Modif Mineur :  Ajouet de comenter d'incation de bramche en Debue est  fin de fichier.

--- a/Vue_HTML/Footer.html
+++ b/Vue_HTML/Footer.html
@@ -1,3 +1,4 @@
+<!-- # Atention Branche master -->
 <footer>
     <h1>Lien utile pour se perfectionner développement et intégration web.</h1>
     <p>
@@ -13,3 +14,4 @@
 </body>
 
 </html>
+<!-- # Atention Branche master -->
