--- a/Vue_HTML/MainDevoire1&2.html
+++ b/Vue_HTML/MainDevoire1&2.html
@@ -1,5 +1,5 @@
 <main>
-
+    <!-- # Atention Branche master -->
     <article class="mainAr">
         <h1 class=".colone">Presentation des devoirs : esecad.myskillandyou.</h1>
         <p class=".colone">Integrateur Developpeur Web et Mobile</p>
@@ -143,5 +143,6 @@
         </article>
 
     </article>
+    <!-- # Atention Branche master -->
     <!-- je pourai par la suite ajouter des artice icie -->
 </main>
